infra/k8s/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: mongodb
  replicas: 1
  minReadySecond: 5
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata: 
      labels:
        app: mongodb
        selector: mongodb
    spec:
      containers: 
        - name: mongodb
          image: mongo:7.0.5
          ports:
            - ContainerPort: 27017
          volumeMounts:
            - name: pvc
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          request:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-srv
spec:
  selector:
    name: mongodb
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
