infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubenetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: bonvoyage.com
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: auth-srv
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: auth-srv
                port:
                  number: 4000
